--- a/PacEClouD iOS/www/checkout_120.html
+++ b/PacEClouD iOS/www/checkout_120.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <h1> Page loaded. </h1>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Merchant</title>
     <meta name="viewport" content="width=device-width" ,="" initial-scale="1.0/">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrom=1">
-
-    <script src="file:///android_asset/www/js/jquery-1.8.3.min.js"></script>
+    <script src="./js/jquery-1.8.3.min.js"></script>
     <script src="https://scripts.sandbox.bka.sh/versions/1.2.0-beta/checkout/bKash-checkout-sandbox.js"></script>
 </head>
 <body>
@@ -18,11 +18,11 @@ $(document).ready(function() {
         bKash.init({
             paymentMode: 'checkout',
             createRequest: function(request) {
-                window.AndroidNative.createPayment();
+                   window.webkit.messageHandlers.iOSNative.postMessage({action : "CREATE"});
             },
 
             executeRequestOnAuthorization: function() {
-                window.AndroidNative.executePayment();
+                window.webkit.messageHandlers.iOSNative.postMessage({action : "EXECUTE"});
             }
         });
 });
@@ -37,7 +37,7 @@ $(document).ready(function() {
 
     function finishBkashPayment() {
         $('#bKashFrameWrapper').fadeOut();
-        window.AndroidNative.finishBkashPayment();
+        window.webkit.messageHandlers.iOSNative.postMessage({action : "FINISH"});
     }
 
     function clickPayButton() {
